@@ -440,3 +440,7 @@
 2016-04-06 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 5:0:2.
 	* Incremented the package version to 0.11.4.
+2016-05-11 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in the 'SyMcastSocket::bind()' methods in
+	'sy/symcastsocket.cpp' that caused the process to exit if the
+	bind() call failed.
